--- a/29664111/index.html
+++ b/29664111/index.html
@@ -15,8 +15,8 @@
                 <li class="nombres">Hola, Maximiliano</li>
                 <li class="buscador">
                     <form>
-                        <input type="text" placeholder="Nombre...">
-                        <input type="submit" value="buscar">
+                        <input class="place" type="text" placeholder="Nombre...">
+                        <input class="boton" type="submit" value="buscar">
                     </form>
                 </li>
             </ul>
@@ -24,55 +24,52 @@
     </header>
     <section>
         <ul class="fila">
-            <li class="img uno">
-                <img src="29664111.png">
+            <li class="img">
+                <img src="29664111Grande.png">
                 <p class="text">Maximiliano Carrillo</p>
             </li>
-            <li class="img dos">
+            <li class="img">
                 <img src="dummy6/dummy.jpg">
                 <p class="text">Juan Antonio Perez</p>
             </li>
-            <li class="img tres">
+            <li class="img">
                 <img src="dummy3/dummy.jpg">
                 <p class="text">Maritza Rodriguez</p>
             </li>
-            <li class="img cuatro">
+            <li class="img">
                 <img src="dummy1/dummy.jpg">
                 <p class="text">Emilia Casado</p>
             </li>
-        </ul>
-        <ul class="fila">
-            <li class="img uno">
+       
+            <li class="img">
                 <img src="dummy4/dummy.jpg">
                 <p class="text">Enrique Colina</p>
             </li>
-            <li class="img dos">
+            <li class="img">
                 <img src="dummy2/dummy.jpg">
                 <p class="text">Maria Elena Pinto</p>
             </li>
-            <li class="img tres">
+            <li class="img">
                 <img src="dummy5/dummy.jpg">
                 <p class="text">Ronald Gutierrez</p>
             </li>
-            <li class="img cuatro">
+            <li class="img">
                 <img src="dummy6/dummy.jpg">
                 <p class="text">Juan Antonio Perez</p>
             </li>
-        </ul>
-        <ul class="fila">
-            <li class="img uno">
+            <li class="img">
                 <img src="dummy3/dummy.jpg">
                 <p class="text">Maritza Rodriguez</p>
             </li>
-            <li class="img dos">
+            <li class="img">
                 <img src="dummy1/dummy.jpg">
                 <p class="text">Emilia Casado</p>
             </li>
-            <li class="img tres">
+            <li class="img">
                 <img src="dummy4/dummy.jpg">
                 <p class="text">Enrique Colina</p>
             </li>
-            <li class="img cuatro">
+            <li class="img">
                 <img src="dummy5/dummy.jpg">
                 <p class="text">Ronald Gutierrez</p>
             </li>
@@ -81,5 +78,6 @@
     <footer>
         <p>Copyright © 2024 Escuela de computación - ATI. Todos los derechos reservados</p>
     </footer>
+    
 </body>
 </html>
