--- a/29664111/perfil.html
+++ b/29664111/perfil.html
@@ -13,7 +13,11 @@
 <body>
     <div class="contenedor">
         <div class="foto">
-            <img src="29664111.png">
+            <picture>
+                <source srcset="29664111Pequeno.png" media="(max-width: 480px)">
+                <source srcset="29664111Pequeno.png" media="(min-width: 481px) and (max-width: 768px)">
+                <img src="29664111Grande.png">
+            </picture>
         </div>
         <div class="info">
             <div class="nombre">
