--- a/index.html
+++ b/index.html
@@ -24,57 +24,7 @@
         </nav>
     </header>
     <section>
-        <ul class="fila">
-            <li class="img">
-                <img src="29664111Grande.png">
-                <p class="text">Maximiliano Carrillo</p>
-            </li>
-            <li class="img">
-                <img src="dummy6/dummy.jpg">
-                <p class="text">Juan Antonio Perez</p>
-            </li>
-            <li class="img">
-                <img src="dummy3/dummy.jpg">
-                <p class="text">Maritza Rodriguez</p>
-            </li>
-            <li class="img">
-                <img src="dummy1/dummy.jpg">
-                <p class="text">Emilia Casado</p>
-            </li>
-       
-            <li class="img">
-                <img src="dummy4/dummy.jpg">
-                <p class="text">Enrique Colina</p>
-            </li>
-            <li class="img">
-                <img src="dummy2/dummy.jpg">
-                <p class="text">Maria Elena Pinto</p>
-            </li>
-            <li class="img">
-                <img src="dummy5/dummy.jpg">
-                <p class="text">Ronald Gutierrez</p>
-            </li>
-            <li class="img">
-                <img src="dummy6/dummy.jpg">
-                <p class="text">Juan Antonio Perez</p>
-            </li>
-            <li class="img">
-                <img src="dummy3/dummy.jpg">
-                <p class="text">Maritza Rodriguez</p>
-            </li>
-            <li class="img">
-                <img src="dummy1/dummy.jpg">
-                <p class="text">Emilia Casado</p>
-            </li>
-            <li class="img">
-                <img src="dummy4/dummy.jpg">
-                <p class="text">Enrique Colina</p>
-            </li>
-            <li class="img">
-                <img src="dummy5/dummy.jpg">
-                <p class="text">Ronald Gutierrez</p>
-            </li>
-        </ul>
+        <ul class="fila" id="estudiantes-lista"></ul>
     </section>
     <footer>
         <p>Copyright © 2024 Escuela de computación - ATI. Todos los derechos reservados</p>
