perfil con información dinámica

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ATI[UCV] 2024-1</title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
-    <link rel="preload" href="reto5/conf/configES.json" as="json" type="application/json">
+    <link rel="json" href="reto5/conf/configES.json">
 </head>
 <body class="index">
     <header>
