--- a/perfil.html
+++ b/perfil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maximiliano Carrillo</title>
+    <title class="tituloPerfil"></title>
     <link rel="icon" href="http://www.ciens.ucv.ve/portalasig2/favicon.ico" type="image/x-icon">
     <link href="./css/style.css" rel="stylesheet" type="text/css">
       
@@ -14,42 +14,41 @@
     <div class="contenedor">
         <div class="foto">
             <picture>
-                <source srcset="29664111Pequeno.png" media="(max-width: 480px)">
-                <source srcset="29664111Pequeno.png" media="(min-width: 481px) and (max-width: 768px)">
-                <img src="29664111Grande.png">
+                <img class="fotoperfil" src="">
             </picture>
         </div>
         <div class="info">
             <div class="nombre">
-                <span class="maximiliano">Maximiliano Carrillo</span>
+                <span id="nombre"></span>
             </div>
             <div class="datos">
-                <p class="desc">Soy estudiante de la escuela de computación de la Universidad Central de Venezuela, actualmente cursando: Aplicaciones con tecnologías de internet; interacción humano-computador; sistemas de información y calculo científico. Estoy interesado en la rama de las bases de datos.</p>
+                <p class="desc"></p>
                 <table class="texto">
                     <tr>
                         <td> Mi color favorito es: </td>
-                        <td> Naranja. </td>
+                        <td class="color"></td>
                     </tr>
                     <tr>
                         <td> Mi libro favorito es: </td>
-                        <td> Harry Potter y el prisionero de Azkaban. </td>
+                        <td class="libro"></td>
                     </tr>
                     <tr>
                         <td> Mi estilo de música preferida es: </td>
-                        <td> Escucho un poco de todo, asi que no tengo un estilo de musica favorito. </td>
+                        <td class="musica"></td>
                     </tr>
                     <tr>
                         <td> Mis videojuegos favoritos son: </td>
-                        <td> Genshin Impact y Honkai Star Rail (juego cuando el semestre me lo permite). </td>
+                        <td class="juegos"></td>
                     </tr>
                     <tr>
                         <td> <b>Lenguajes de programación aprendidos:</b> </td>
-                        <td> <b>C++, JavaScript, C y Java.</b> </td>
+                        <td class="lenguajes"> <b></b> </td>
                     </tr>
                 </table>
-                <span class="correo"> Si necesitan contactarse conmigo, me pueden escribir a: <a href="mailto:maximilianoc2002@gmail.com">maximilianoc2002@gmail.com</a>.</span>
+                <span class="correo"> Si necesitan contactarse conmigo, me pueden escribir a: <a class="mail" href=""></a></span>
             </div>
         </div>
     </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
