perfil con información dinámica

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <ul>
                 <li class="titulo">ATI<span>[UCV]</span> 2024-1</li>
-                <li class="nombres">Hola, Maximiliano</li>
+                <li class="nombres"></li>
                 <li class="buscador">
-                    <form>
-                        <input class="place" type="text" placeholder="Nombre...">
+                    <form class="menuForm">
+                        <input id="nom" class="place" type="text" placeholder="Nombre...">
                         <input class="boton" type="submit" value="buscar">
                     </form>
                 </li>
