--- a/perfil.html
+++ b/perfil.html
@@ -25,27 +25,27 @@
                 <p class="desc"></p>
                 <table class="texto">
                     <tr>
-                        <td> Mi color favorito es: </td>
+                        <td id="color"> Mi color favorito es: </td>
                         <td class="color"></td>
                     </tr>
                     <tr>
-                        <td> Mi libro favorito es: </td>
+                        <td id="libro"> Mi libro favorito es: </td>
                         <td class="libro"></td>
                     </tr>
                     <tr>
-                        <td> Mi estilo de música preferida es: </td>
+                        <td id="musica"> Mi estilo de música preferida es: </td>
                         <td class="musica"></td>
                     </tr>
                     <tr>
-                        <td> Mis videojuegos favoritos son: </td>
+                        <td id="juegos"> Mis videojuegos favoritos son: </td>
                         <td class="juegos"></td>
                     </tr>
                     <tr>
-                        <td> <b>Lenguajes de programación aprendidos:</b> </td>
+                        <td id="lenguajes"> <b>Lenguajes de programación aprendidos:</b> </td>
                         <td class="lenguajes"> <b></b> </td>
                     </tr>
                 </table>
-                <span class="correo"> Si necesitan contactarse conmigo, me pueden escribir a: <a class="mail" href=""></a></span>
+                <span id="mail" class="correo"> Si necesitan contactarse conmigo, me pueden escribir a: <a class="mail" href=""></a></span>
             </div>
         </div>
     </div>
